config/ingress.https.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
  name: mole-api
spec:
  tls:
    - hosts:
        - mole-api.ere.io
      secretName: mole-api-tls
  rules:
    - host: mole-api.ere.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mole-api
                port:
                  number: 80
